@@ -5,6 +5,8 @@ Changelog
 ----------------------
  * Bug fix: Renamed css file to css.dtml. Use portal_url to anchor images
    [tiberich #4956]
+ * Change: make the @eea.relations.macros generic 
+   [tiberich #4982]
 
 4.3 - (2012-02-15)
 ------------------
